work on spacing issues

--- a/source/assets/stylesheets/pages/_header.scss
+++ b/source/assets/stylesheets/pages/_header.scss
@@ -7,12 +7,14 @@ header, footer {
         // color: #00F7FF;
         color: #F09F2D;
         font-weight: bold;
-        font-size: 2em;
+        font-size: 2.5em;
         text-decoration: none;
+        letter-spacing: 0.2em;
     }
 
     ul {
         display: flex;
+        justify-content: space-around;
 
         a {
             display: block;
