--- a/source/assets/stylesheets/pages/_index.scss
+++ b/source/assets/stylesheets/pages/_index.scss
@@ -172,7 +172,7 @@ section {
             text-align: left;
             border-radius: 0 0 1em 0;
 
-            h1 {
+            p {
                 font-size: 3em;
                 line-height: 1.2em;
             }
